--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    {% include header.html %}
+    {% include hero.html %}
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
@@ -13,7 +13,7 @@
       </div>
     </main>
 
-    {% include footer.html %}
+    {% include bwc-footer.html %}
 
   </body>
 
