formatted services and small modules

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,9 @@
 <header class="bwc-header bwc-section" id="hero">
   <img id="logo" src="{{ site.logo }}" />
 
-  <p class="section-text">Web design and experiences made with you in mind.</p>
+  <div class="section-text">
+    <p>Web design and experiences made with you in mind.</p>
+  </div>
 
   <button>Get to know us</button>
 </header>
