--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,33 +4,58 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Services</h1>
+  <div class="container">
+    <div class="row bwc-section">
+      <div class="section-text">
+        <h1>What we can do for you</h1>
+        <p>We pride ourselves on practical yet imaginative design solutions to bring out the best of your brand.</p>
+      </div>
+
+      <ul class="small-module">
+        {% for small-module in site.services %}
+          <div class="col-4">
+            <li>
+    
+              <div class="module-image">
+                <!--<img src="{{ small-module.image }}" />-->
+              </div> 
+
+              <div class="module-text">
+                <h3>
+                  {{ small-module.title | escape }}
+                </h3>
+
+                <p>
+                  {{ small-module.text | escape }}
+                </p>
+              </div>
   
-  <!--{{ content }}-->
+              <div class="module-line" />
+            </li>
+          </div>
+        {% endfor %}
+      </ul>
 
-  <ul class="post-list">
-    {% for small-module in site.services %}
-      <li>
-        <h2>
-          {{ small-module.title | escape }}
-        </h2>
+    </div>
 
-        <p>
-          {{ small-module.text | escape }}
-        </p>
-      </li>
-    {% endfor %}
-  </ul>
+    <div class="row bwc-section">
+      <div class="section-text">
+        <h1>Three women, three talents</h1>
+        <p>Three's a magic number, after all.</p>
+      </div>
 
-  <ul class="post-list">
-    {% for side-module in site.team %}
-      <li>
-        <p>
-          {{ side-module.text | escape }}
-        </p>
-      </li>
-    {% endfor %}
-  </ul>
+      <ul class="post-list">
+        {% for side-module in site.team %}
+          <li>
+            <p>
+              {{ side-module.text | escape }}
+            </p>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+
+  </div>
 
   <!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>-->
 
