re-styled services with flexbox (de-formatted everything else)

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,9 +1,8 @@
 <header class="bwc-header bwc-section" id="hero">
   <img id="logo" src="{{ site.logo }}" />
 
-  <div class="section-text">
-    <p>Web design and experiences made with you in mind.</p>
-  </div>
+  <p>An all-women studio who strives to provide beautiful, accessible, and functional 
+design solutions.</p>
 
   <button>Get to know us</button>
 </header>
