--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,8 @@
       </div>
     </main>
 
-    {% include bwc-footer.html %}
+    {% include contact.html %}
+    {% include copyright.html %}
 
   </body>
 
