--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,59 +4,57 @@ layout: default
 
 <div class="home">
 
-  <div class="container">
-    <div class="row bwc-section">
-      <div class="section-text">
-        <h1>What we can do for you</h1>
-        <p>We pride ourselves on practical yet imaginative design solutions to bring out the best of your brand.</p>
-      </div>
+  <section id="services">
+    <header>
+      <h1>What we can do for you</h1>
+      <p>We pride ourselves on practical yet imaginative design solutions to bring out the best of your brand.</p>
+    </header>
+
+    <div class="content">
 
       <ul class="small-module">
         {% for small-module in site.services %}
-          <div class="col-4">
+          <div>
             <li>
-    
-              <div class="module-image">
-                <!--<img src="{{ small-module.image }}" />-->
-              </div> 
+              <div class="icon" style="background-image: url({{ small-module.image }})" />
 
-              <div class="module-text">
-                <h3>
-                  {{ small-module.title | escape }}
-                </h3>
-
-                <p>
-                  {{ small-module.text | escape }}
-                </p>
-              </div>
-  
-              <div class="module-line" />
+              <h3>{{ small-module.title | escape }}</h3>
+              <p>{{ small-module.text | escape }}</p>
             </li>
           </div>
         {% endfor %}
       </ul>
 
+      <button class="highlight">Check out our design packages</button>
     </div>
 
-    <div class="row bwc-section">
-      <div class="section-text">
-        <h1>Three women, three talents</h1>
-        <p>Three's a magic number, after all.</p>
-      </div>
+  </section>
 
-      <ul class="post-list">
+  <section>
+    <header>
+      <h1>Three women, three talents</h1>
+      <p>Three's a magic number, after all.</p>
+    </header>
+  </section>
+
+  <div class="content">
+
+      <ul class="side-module">
         {% for side-module in site.team %}
           <li>
-            <p>
-              {{ side-module.text | escape }}
-            </p>
+
+            <div class="module-image" />
+
+            <div class="module-text">
+              <p>
+                {{ side-module.text | escape }}
+              </p>
+            </div>
+
+            <div class="module-line" />
           </li>
         {% endfor %}
       </ul>
-    </div>
 
   </div>
-
-  <!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>-->
-
 </div>
