--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -1,4 +1,28 @@
-@import "../simple-grid";
+@import "base";
+
+/* TO DO
+- scale fonts better
+*/
+
+body {
+  font-family: $body-font-family;
+  color: $navy;
+  text-align: center;
+  font-size: 1rem;
+}
+
+h1 {
+  font-family: $header-font-family;
+  font-weight: normal;
+  font-style: italic;
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-weight: 500;
+}
+
+/*@import "../simple-grid";
 
 h1,
 h2,
@@ -17,6 +41,7 @@ p {
   h1 {
     margin: 0 auto;
     padding-top: 3rem;
+    font-style: italic;
     font-family: $header-font-family;
     //font-size: $base-font-size * 2;
   }
@@ -26,13 +51,28 @@ p {
     margin-top: 1rem;
     margin-bottom: 1.5rem;
     width: 32vw;
-    min-width: 21rem;
+    min-width: 16rem;
   }
 }
 
 .module-text {
+  h3 {
+    margin-bottom: -0.5rem;
+  }
+
   p {
     padding-left: 1rem;
     padding-right: 1rem;
   }
 }
+
+.side-module {
+  text-align: left;
+
+  .module-text {
+    p {
+      width: 50%;
+      padding-left: 10rem;
+    }
+  }
+}*/
