--- a/_sass/simple-grid.scss
+++ b/_sass/simple-grid.scss
@@ -7,7 +7,8 @@ $font-weight-regular: 400;
 $font-weight-heavy: 500;
 //$font-height: 1.5;
 $font-height: 1;
-$base-font-size: 1.125rem;
+//$base-font-size: 1.125rem;
+$base-font-size: 1rem;
 
 // colors
 $dark-grey: #333447;
@@ -28,7 +29,7 @@ body {
 
 * {
   font-family: $font-family;
-  /*color: $dark-grey;*/
+  //color: $dark-grey;
   line-height: $font-height;
 }
 
@@ -109,7 +110,7 @@ $breakpoint-med: 48em; // 720px
 $breakpoint-large: 60em; // 960px
 
 .container {
-  width: 90%;
+  width: 85%;
   margin-left: auto;
   margin-right: auto;
   //border:1px solid;
