formatted footer (no image)

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,12 +1,19 @@
-<section>
-    <header>
-      <h1>It'll be magic. Promise.</h1>
-      <p>Interested in partnering together? <br /> Shoot us a message, and we’ll get in touch.</p>
-    </header>
-
-    
-    <div>
+<section class="contact">
+  <div class="content">
+    <div class="half-page">
+      <header>
+        <h1>It'll be magic. Promise.</h1>
+        <p>Interested in partnering together? <br /> Shoot us a message, and we’ll get in touch.</p>
+      </header>
+      
       <button class="highlight">Give us the details</button>
       <button>Send an e-mail</button>
     </div>
+
+    <div class="half-page">
+      <img src="" />
+      <p>Some content</p>
+    </div>
+  
+  </div>
 </section>
