--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -17,3 +17,8 @@ $header-font-family: "Zilla Slab", serif;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+
+.content {
+  margin: 0 auto;
+  width: 85%;
+}
