formatted-ish text

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,8 +1,10 @@
-<header class="bwc-header bwc-section" id="hero">
-  <img id="logo" src="{{ site.logo }}" />
+<header id="hero">
+  <section>
+    <img id="logo" src="{{ site.logo }}" />
 
-  <p>An all-women studio who strives to provide beautiful, accessible, and functional 
-design solutions.</p>
+    <p>An all-women studio who strives to provide beautiful, accessible, and functional 
+  design solutions.</p>
 
-  <button>Get to know us</button>
+    <button>Get to know us</button>
+  </section>
 </header>
