--- a/_sass/partials/_button.scss
+++ b/_sass/partials/_button.scss
@@ -22,7 +22,7 @@ button {
 
   &.highlight {
     background: $orange;
-    color: $navy;
+    color: $off-white;
     border: 3px solid $orange;
   }
 
