--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -5,6 +5,10 @@ $half-page-width: 45%;
 $half-page-min-width: 20rem;
 $half-page-margin: 0.75rem;
 
+section.contact {
+  margin-bottom: 0rem;
+}
+
 .contact {
   background: $grey;
 
@@ -22,7 +26,7 @@ $half-page-margin: 0.75rem;
   }
 
   header {
-    margin-top: -2.5rem;
+    margin-top: -3rem;
     margin-bottom: 2.5rem;
     padding: 0;
   }
