--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -25,8 +25,84 @@ h3 {
   font-weight: 500;
 }
 
+p {
+  line-height: 1.5rem;
+}
+
+header {
+  width: 35vw;
+  margin: 0 auto;
+
+  p {
+    margin: 0 auto;
+    margin-top: 1.5rem;
+    margin-bottom: 2rem;
+    width: 30vw;
+  }
+}
+
 button {
   font-size: $base-font-size;
+}
+
+/*@media only screen and (max-width: 1024px) { 
+  header {
+    min-width: 30rem;
+
+    p {
+      min-width: 25rem;
+    }
+  }
+}*/
+
+@media only screen and (max-width: 1024px) { 
+  header {
+    min-width: 30rem;
+  
+    p {
+      min-width: 26rem;
+    }
+  }
+
+  .contact {
+    header {
+      min-width: 25rem;
+    }
+  
+    p {
+      min-width: 18rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) { 
+  header {
+    min-width: 24rem;
+  
+    p {
+      min-width: 23rem;
+    }
+  }
+
+  .contact {
+    header {
+      min-width: 18rem;
+    }
+  
+    p {
+      min-width: 17rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 732px) { 
+  header {
+    min-width: 18rem;
+  
+    p {
+      min-width: 17rem;
+    }
+  }
 }
 
 /*@import "../simple-grid";
