updated footer image

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,17 +2,18 @@
   <div class="content">
     <div class="half-page">
       <header>
-        <h1>It'll be magic. Promise.</h1>
-        <p>Interested in partnering together? <br /> Shoot us a message, and we’ll get in touch.</p>
+        <h1>Ready to be dazzled?</h1>
+        <p>Let's make magic together. <br /> Shoot us a message, and we’ll get in touch.</p>
       </header>
       
-      <button class="highlight">Give us the details</button>
-      <button>Send an e-mail</button>
+      <div class="contact-buttons">
+        <a href="#" target="_blank"><button class="highlight">Give us the details</button></a>
+        <a href="mailto:hello@bewildercreative.co" target="_blank"><button>Send an e-mail</button></a>
+      </div>
     </div>
 
     <div class="half-page">
-      <img src="" />
-      <p>Some content</p>
+      <img src="../assets/images/footer/dazzling.gif" />
     </div>
   
   </div>
