attempting to fix relative css path

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="half-page">
-      <img src="../assets/images/footer/dazzling.gif" />
+      <img src="assets/images/footer/dazzling.gif" />
     </div>
   
   </div>
