--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,8 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
-  <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}">
+  <!--<link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}">-->
+  <link rel="stylesheet" href="assets/main.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:400,500|Zilla+Slab:400,400i" rel="stylesheet">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
