adjust margin on footer image

--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -65,6 +65,11 @@ footer {
     header {
       margin-top: -3rem;
     }
+
+    img {
+      margin-top: 3rem;
+      margin-bottom: 3rem;
+    }
   } 
 }
 
