--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,7 +16,7 @@
 @import "partials/typography";
 @import "partials/footer";
 @import "partials/small-module";
-//@import "partials/side-module";
+@import "partials/side-module";
 
 $section-margin-bottom: 5rem;
 
@@ -25,11 +25,18 @@ body {
   padding: 0;
   width: 100%;
   background: $off-white;
+  overflow-x: hidden;
 }
 
 section {
   width: 100%;
   margin-bottom: $section-margin-bottom;
+  //background: black;
+}
+
+.content {
+  margin: 0 auto;
+  width: 85%;
 }
 
 header#hero {
