--- a/_sass/partials/_side-module.scss
+++ b/_sass/partials/_side-module.scss
@@ -11,6 +11,58 @@ $module-padding-top: ($icon-size / 2) - 1;
 $module-text-padding-top: ($icon-size + 1);
 
 #team { 
+  .content {
+    width: 100%;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 0;
+    //background: blue;
+  }
+
+  li {
+    margin: 0 auto;
+    padding: 0;
+    padding-bottom: 1rem;
+    width: 100%;
+    //background: white;
+
+    .icon-container {
+    }
+
+    .module-text {
+      margin-left: auto;
+      display: -webkit-flex;
+      display: flex;
+      align-items: center;
+      width: 65%;
+      height: 14rem;
+      background: $grey;
+      text-align: left;
+    }
+
+    p {
+      width: 55%;
+      padding-left: 3rem;
+    }
+  }
+
+  li:nth-child(even) {
+    .module-text {
+      margin: 0;
+      text-align: right;
+    }
+
+    p {
+      margin-left: auto;
+      padding-right: 3rem;
+    }
+  }
+}
+
+/*#team { 
   ul {
     list-style-type: none;
     margin: 0 auto;
@@ -19,33 +71,36 @@ $module-text-padding-top: ($icon-size + 1);
 
   li {
     margin: 0 auto;
+    width: 100%;
+    height: 13rem;
+    margin-bottom: 1rem;
+  }
+
+  .module-text {
+    margin: 0 auto;
     display: flex;
     align-items: center;
     background: $grey;
     width: 70%;
-    height: 13rem;
+    height: 11rem;
     margin-bottom: 1rem;
 
     p {
-      width: 65%;
+      width: 45%;
       min-width: 12rem;
       text-align: left;
-      padding-left: 8rem;
+      padding-left: 20%;
     }
   }
 
-  /*.icon {
-    min-width: $icon-size;
-    min-height: $icon-size;
+  .icon {
+    width: $icon-size;
+    height: $icon-size;
     background: $navy;
     border-radius: 50%;
-    margin-left: -93%;
-  }*/
-
-  /*li:nth-item(even) {
-    align-items: flex-end;
-  }*/
-}
+    margin-left: -75%;
+  }
+}*/
 
 /*#team {
   //background: blue;
