added alt tags to img

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,6 @@
 <header id="hero">
   <section>
-    <img id="logo" src="{{ site.logo }}" />
+    <img id="logo" alt="Be Wilder Creative" src="{{ site.logo }}" />
 
     <p>An all-women studio who strives to provide beautiful, accessible, and functional 
   design solutions.</p>
