--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="half-page">
-      <img src="assets/images/footer/dazzling.gif" />
+      <img alt="An image of a woman in the woods holding a glowing yellow orb in the palms of her hands" src="assets/images/footer/dazzling.gif" />
     </div>
   
   </div>
